--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -83,10 +83,10 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
 						<div class="text">
-							<h2><a href="investment.html">金融保险</a></h2>
-							<p><a href="investment/investment/investment_projects.html">金融投资服务</a></p>
-							<p><a href="investment/investment/asset_projects.html">资产管理服务</a></p>
-							<p><a href="investment/mapfre/mapfre_seguro.html">MAPFRE保险服务</a></p>
+							<a href="investment.html"><h2>金融保险</h2></a>
+							<a href="investment/investment/investment_projects.html"><h5>金融投资服务</h5></a>
+							<a href="investment/investment/asset_projects.html"><h5>资产管理服务</h5></a>
+							<a href="investment/mapfre/mapfre_seguro.html"><h5>MAPFRE保险服务</h5></a>
 						</div>
 					</div>
 				</div>
@@ -94,10 +94,10 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
 						<div class="text">
-							<h2><a href="ittech.html">企业IT技术</a></h2>
-							<p><a href="ittech/cloud/cloud.html">云技术解决方案</a></p>
-							<p><a href="ittech/network/network.html">企业网络解决方案</a></p>
-							<p><a href="ittech/security/security.html">企业安保解决方案</a></p>
+							<a href="ittech.html"><h2>企业IT技术</h2></a>
+							<a href="ittech/cloud/cloud.html"><h5>云技术解决方案</h5></a>
+							<a href="ittech/network/network.html"><h5>企业网络解决方案</h5></a>
+							<a href="ittech/security/security.html"><h5>企业安保解决方案</h5></a>
 						</div>
 					</div>
 				</div>
@@ -105,13 +105,12 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
-							<h2><a href="products.html">产品代理</a></h2>
-							<p><a href="products/mobile/mobile.html">智能手机</a></p>
-							<p><a href="products/network/network.html">网络设备</a></p>
-							<p><a href="products/security/security.html">安防设备</a></p>
-							<p><a href="products/solar/solar.html">光伏设备</a></p>
-							<p><a href="products/battery/battery.html">储能设备</a></p>
-							<p></p>
+							<a href="products.html"><h2>产品代理</h2></a>
+							<a href="products/mobile/mobile.html"><h5>智能手机</h5></a>
+							<a href="products/network/network.html"><h5>网络设备</h5></a>
+							<a href="products/security/security.html"><h5>安防设备</h5></a>
+							<a href="products/solar/solar.html"><h5>光伏设备</h5></a>
+							<a href="products/battery/battery.html"><h5>储能设备</h5></a>
 						</div>
 					</div>
 				</div>
@@ -119,11 +118,11 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
 						<div class="text">
-							<h2><a href="gooverseas.html">中资落地服务</a></h2>
-							<p><a href="gooverseas/gooverseas/go.html">出海孵化</a></p>
-							<p><a href="gooverseas/hr/hr.html">人才猎聘</a></p>
-							<p><a href="gooverseas/marketing/marketing.html">市场营销</a></p>
-							<p><a href="gooverseas/admin/admin.html">行政服务</a></p>
+							<a href="gooverseas.html"><h2>中资落地服务</h2></a>
+							<a href="gooverseas/gooverseas/go.html"><h5>出海孵化</h5></a>
+							<a href="gooverseas/hr/hr.html"><h5>人才猎聘</h5></a>
+							<a href="gooverseas/marketing/marketing.html"><h5>市场营销</h5></a>
+							<a href="gooverseas/admin/admin.html"><h5>行政服务</h5></a>
 						</div>
 					</div>
 				</div>
@@ -220,7 +219,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
