--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
+            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
@@ -79,7 +79,7 @@
                 <div class="col-md-4 d-flex">
                     <div class="  box p-4 text-center" style="background-image: url(images/image_8.jpg); " data-stellar-background-ratio="0.5">
                         <h2 class="mb-4" style = "color: #fcfcfd">CHAT ON LINE</h2>
-                        <li><span class="icon icon-wechat"></span><span class="text" >wechat：BrainOceanInternational</span></li>
+                        <li><span class="icon icon-wechat"></span><span class="text" >wechat：BrainOceanInt</span></li>
                         <li><span class="icon icon-whatsapp"></span><span class="text">whatsapp：+34 604 902 828</span></li>
                     </div>
                 </div>
@@ -89,16 +89,87 @@
     </section>
 
 
-<!--    &lt;!&ndash;    map————————————————————————————————————————————————————————————————————————————————————————————————&ndash;&gt;-->
-<!--    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">-->
-<!--        <div class="container">-->
-<!--            <div class="row d-flex align-items-stretch no-gutters">-->
-<!--                <div id="map">-->
-<!--                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.4048883724026!2d-3.7591530251472487!3d40.266755264755425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418abda7da35ad%3A0xcf5bf9b8ed7046e0!2sC.%20del%20R%C3%ADo%20Ebro%2C%2028947%2C%20Madrid!5e0!3m2!1sen!2ses!4v1687558658767!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
-<!--                </div>-->
-<!--            <div>-->
-<!--        </div>-->
-<!--    </section>-->
+
+    <section class="ftco-intro" style="background-image: url(gooverseas/1.jpg);" data-stellar-background-ratio="0.5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 suscribete_form">
+                    <h2 class="mb-2 bread">加入我们 | 开放岗位</h2>
+                    <div class="row wrapper">
+                        <div class="col-md-5 col-lg-6 ftco-animate">
+                            <div class="blog-entry">
+
+                                <div class="text bg-dark p-4">
+                                    <h2>云技术工程师</h2>
+                                    <p>职位类别：云技术工程师</p>
+                                    <p>工作地点：西班牙</p>
+                                    <p>工作年限：3年及以上</p>
+                                    <p>最低学历：本科及以上</p>
+                                    <p>所属行业：ICT</p>
+                                    <br>
+                                    <p>职位描述</p>
+                                    <p>1.负责所辖地区行业的市场洞察与分析、市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
+                                    <p>2.负责客户IT解决方案对接；</p>
+                                    <p>3.负责客户的定期拜访、沟通，与客户建立长期而稳定的合作关系，协助客户做好IT技术维护；</p>
+                                    <br>
+
+                                    <p>职位要求</p>
+                                    <p>1.本科及以上学历，计算机、电子、通信、软件、数学等相关理工科专业，三年以上云/软件/网络或其他IT相关产品解决方案销售，对云技术有一定了解；</p>
+                                    <p>2.中文、英语、西班牙语商务交流水平；</p>
+                                    <p>3.对相关产品及市场有较深的理解，热爱解决方案销售工作，具备相关产品技术经验者优先；</p>
+                                    <p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
+                                    <p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
+                                    <p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: flex-start">
+                            <div class="blog-entry">
+                                <div class="text bg-dark p-4">
+                                    <h2>MAPFRE保险销售</h2>
+                                    <p>职位类别：企业保险销售</p>
+                                    <p>工作地点：西班牙</p>
+                                    <p>工作年限：3年及以上</p>
+                                    <p>最低学历：本科及以上</p>
+                                    <p>所属行业：保险</p>
+                                    <br>
+                                    <p>职位描述</p>
+                                    <p>1.负责所辖地区企业保险业务市场开拓、制定区域市场策略、营销方案的实施和维护工作；</p>
+                                    <p>2.依据公司策略，运用各种销售工具开发新客户，建立、发展和维护客户关系，提升公司影响力；</p>
+                                    <p>3.负责客户的定期拜访、沟通，进行客户关系的维护和进一步开发，与客户建立长期而稳定的合作关系；</p>
+                                    <br>
+                                    <p>职位要求</p>
+                                    <p>1.本科及以上学历，了解保险相关行业产品及具有相关销售经验；</p>
+                                    <p>2.中文、英语、西班牙语商务交流水平；</p>
+                                    <p>3.对相关产品及市场有较深的理解，热爱销售工作，能主导市场拓展与销售工作，具备相关产品经验者优先；</p>
+                                    <p>4.熟悉相关行业特点及市场运作方式， 熟悉相关行业标准；</p>
+                                    <p>6.较强的沟通协调能力，良好的分析与解决问题的能力、商务谈判及人际关系处理能力；</p>
+                                    <p>7.高度的工作热情和良好的职业道德，具备较好的抗压能力，能适应出差。</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!--    map————————————————————————————————————————————————————————————————————————————————————————————————-->
+    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
+        <div class="container">
+            <div class="row d-flex align-items-stretch no-gutters">
+                <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.423931462854!2d-3.7592932251472613!3d40.26633216478109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418abdae6d26c9%3A0x506c1b08ebe98993!2sC.%20del%20R%C3%ADo%20Ebro%2C%2015C%2C%2028947%20Fuenlabrada%2C%20Madrid!5e0!3m2!1sen!2ses!4v1689701564142!5m2!1sen!2ses" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            <div>
+        </div>
+    </section>
 
 
 
@@ -146,7 +217,7 @@
                         <div class="block-23 mb-3">
                             <ul>
                                 <li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-                                <li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+                                <li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
                                 <li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
                                 <li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
                                 <li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
