--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -115,7 +115,6 @@
 
 
 
-
 <section class="ftco-section bg-light">
 	<div class="container">
 		<div class="row" class = "wrapper">
@@ -198,16 +197,16 @@
 					<div class="img-wrap d-flex align-items-stretch">
 
 						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service1.jpg); "></div>
-						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-1">
-							<div class="px-0">
-								<H4>金融投资服务案例</H4>
-								<p><a>【案例一】华意压缩机集团是国内上市公司。</a></p>
-								<p><a>【案例二】爱尔收购欧洲专业眼科机构股票定增。</a></p>
-							</div>
-							<div class="d-flex align-items-center mt-4">
-								<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
+						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-2">
+								<div class="px-1">
+									<H4>金融投资服务案例</H4>
+									<p><a>【案例一】华意压缩机集团收购西班牙Cubig。</a></p>
+									<p><a>【案例二】爱尔眼科收购西班牙Clinic Barviera。</a></p>
+								</div>
+								<div class="d-flex align-items-center mt-4">
+									<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -218,16 +217,15 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service2.jpg);">
-						</div>
-						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-1">
-								<div class="px-0">
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service2.jpg);"></div>
+						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-2">
+								<div class="px-1">
 									<H4>IT解决方案案例介绍</H4>
 									<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术，睿泽国际作为软件架构顾问，并协助其营销活动。</p>
 								</div>
 								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+									<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 								</div>
 							</div>
 						</div>
@@ -239,16 +237,15 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);">
-						</div>
-						<div class="col-md-12  col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-1">
-								<div class="px-0">
+						<div class="img col-md-12 col-lg-3 ftco-animate align-items-stretch" style="background-image: url(images/service3.jpg);"></div>
+						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-2">
+								<div class="px-1">
 									<H4>产品代理案例介绍</H4>
 									<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
 								</div>
 								<div class="d-flex align-items-end mt-4" st>
-									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 								</div>
 							</div>
 						</div>
@@ -260,16 +257,15 @@
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service4.jpg);">
-						</div>
-						<div class="col-md-12 col-lg-9 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="text bg-white p-1">
-								<div class="px-0">
+						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service4.jpg);"></div>
+						<div class="col-md-12 col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-2">
+								<div class="px-1">
 									<H4>中资落地案例介绍</H4>
 									<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
 								</div>
 								<div class="d-flex align-items-center mt-4">
-									<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+									<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 								</div>
 							</div>
 						</div>
@@ -480,7 +476,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
