--- a/investment.html
+++ b/investment.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -50,7 +50,7 @@
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">金融投资保险服务</h1>
-				<h4 class="mb-2 bread">中文，英文，西语，法语，专业投资理财服务</h4>
+				<h4 class="mb-2 bread">中文、英文、西语、法语专业投资理财服务</h4>
 				<p>
 					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
 					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
@@ -131,6 +131,30 @@
 </section>
 
 
+<section class="home-slider owl-carousel">
+	<div class="slider-item" style="background-image:url(images/seguro.jpg)">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<h1 class="mb-4">本月推荐保险产品</h1>
+					<a href="investment/mapfre/mapfre_seguro.html"></a><h2 style = "color: #f7f8f8">企业xxxxxx产品</h2></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="slider-item" style="background-image:url(investment/mapfre/mapfre-seguro.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<h1 class="mb-4">本月推荐保险产品</h1>
+					<a href="investment/mapfre/mapfre_seguro.html"></a><h2 style = "color: #f7f8f8">企业xxxxxx产品</h2></a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
@@ -174,7 +198,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
