--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 240px" src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 100%"src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -49,98 +49,12 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h3 class="mb-2 bread">金融投资保险服务</h3>
+				<a href="../../investment.html"><h3 class="mb-2 bread">金融投资保险服务</h3></a>
 				<h1 class="mb-2 bread">保险业务</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../investment/investment_projects.html">金融投资项目 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../investment/asset_projects.html">资产管理 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../mapfre/mapfre_seguro.html">MAPFRE保险 <i class="ion-ios-arrow-forward"></i></a></span>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-
-
-
-
-<section class="ftco-section bg-light">
-	<div class="container">
-		<div class="row" class = "wrapper">
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">个人业务</span>
-							<span class="yr">医疗保险</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
-						<p href="salud.html">MAPFRExxxxxxxx。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">个人业务</span>
-							<span class="yr">汽车保险</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
-						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">个人业务</span>
-							<span class="yr">生命保险</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
-						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-</section>
-
-<section class="ftco-intro" style="background-image: url(mapfre.jpg);" data-stellar-background-ratio="0.5">
-	<div class="overlay"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 suscribete_form">
-				<h2>MAPFRE业务介绍</h2>
-				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直排在西班牙首位。</p>
 			</div>
 		</div>
 	</div>
@@ -219,6 +133,92 @@
 
 
 
+
+<section class="ftco-intro" style="background-image: url(mapfre.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>MAPFRE业务介绍</h2>
+				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直排在西班牙首位。</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div class="row" class = "wrapper">
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">医疗保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
+						<p href="salud.html">MAPFRExxxxxxxx。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">汽车保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
+						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">生命保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
+						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+</section>
+
+
+
 <section class="ftco-intro" style="background-image: url(../../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
@@ -262,7 +262,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="../../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto" ; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
