--- a/ittech/cloud/huawei/huaweicloud.html
+++ b/ittech/cloud/huawei/huaweicloud.html
@@ -49,7 +49,8 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">企业IT技术解决方案</h1>
+				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
+				<h1 class="mb-2 bread">华为云技术解决方案</h1>
 				<p class="breadcrumbs">
 				<p>
 					<a href="../cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
@@ -89,7 +90,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="../../../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
