--- a/ittech/security/security.html
+++ b/ittech/security/security.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 240px" src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 100%"src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -49,10 +49,10 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h3 class="mb-2 bread">企业IT技术</h3>
+				<a href="../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
 				<h1 class="mb-2 bread">企业安保解决方案</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 			</div>
@@ -60,23 +60,84 @@
 	</div>
 </section>
 
-<section class="ftco-section">
+<section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+		<div class="row" class = "wrapper">
 
-				<p>
-
-				</p>
-
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="hikvision/hikvision.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/hikvision/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="hikvision/hikvision.html">海康威视</a></h3>
+						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座。提供给租户安全的云产品和服务，构建安全可信的云服务。</p>
+					</div>
+				</div>
 			</div>
+
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="yr">NEW</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>
+						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，
+							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。
+							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>
+					</div>
+				</div>
+			</div>
+
+
 		</div>
 	</div>
-
 </section>
 
 
 
+<section class="ftco-intro" style="background-image: url(../security/iot.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>智能物联 数字企业</h2>
+				<p>在教育、能源、农业、交通、医疗、教育等千行百业中耕耘</p>
+				<p>场景物联与人工智能应用的数字化转型</p>
+				<p>开放共享合作共赢的产业互联网生态</p>
+				<br>
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
@@ -88,7 +149,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="../../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
