--- a/investment/investment/investment_projects.html
+++ b/investment/investment/investment_projects.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 240px" src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 100%"src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -49,7 +49,7 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h3 class="mb-2 bread">金融投资保险服务</h3>
+				<a href="../../investment.html"><h3 class="mb-2 bread">金融投资保险服务</h3></a>
 				<h1 class="mb-2 bread">金融投资业务</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../investment/investment_projects.html">金融投资项目 <i class="ion-ios-arrow-forward"></i></a></span>
@@ -178,7 +178,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="../../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto" ; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
