--- a/ittech/security/dahua/dahua.html
+++ b/ittech/security/dahua/dahua.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../../index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="../../../index.html"><img class="logo_img" style="height: 120px; width: 240px" src="../../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -49,7 +49,8 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">企业IT技术解决方案</h1>
+				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
+				<h1 class="mb-2 bread">大华安防技术解决方案</h1>
 				<p class="breadcrumbs">
 				<p>
 					<a href="../../cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
@@ -89,7 +90,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
-							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
+							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
 							<li><img src="../../../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
@@ -107,25 +108,15 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(../../../images/image_1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../../../products/mobile/smartphone.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
-							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
-							</div>
+							<h3 class="heading"><a href="../../../products/mobile/mobile.html">点击查看最新手机产品</a></h3>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(../../../images/image_2.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../../../investment/mapfre/mapfre-seguro.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
-							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
-							</div>
+							<h3 class="heading"><a href="../../../investment/mapfre/mapfre_seguro.html">点击查看最新保险产品</a></h3>
 						</div>
 					</div>
 				</div>
